--- a/templates/base.html
+++ b/templates/base.html
@@ -15,8 +15,17 @@
 <body>
     <div class="col-lg-8 mx-auto p-4 py-md-5">
         <header class="d-flex align-items-center pb-3 mb-5 border-bottom">
-            <a href="/" class="d-flex align-items-center text-body-emphasis text-decoration-none"><span
+            <a href="/" class="d-flex me-md-auto align-items-center text-body-emphasis text-decoration-none"><span
                     class="fs-4">TriviaTrek</span></a>
+            {% if user.is_authenticated %}
+            <span>{{ user.username }}</span>
+            <form action="{% url 'logout' %}" method="post">
+                {% csrf_token %}
+                <button type="submit">Log Out</button>
+            </form>
+            {% else %}
+            <a href="/accounts/login">Log in</a>
+            {% endif %}
         </header>
         <main>
             {% block content %}
