--- a/website/index.css
+++ b/website/index.css
@@ -12,7 +12,7 @@ body {
     background-color: #0015ff;
     overflow: hidden;
     display: flex;
-    justify-content: space-between
+    justify-content: space-between;
 }
 
 .topnav a {
