--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -2,6 +2,11 @@
 
 {% block content %}
 
-<p>Hello, World</p>
+<div class="introduction">
+    <p>Welcome to TriviaTrek! This is where you can make flashcards for you to create and be able to study with them. You can create sets of flashcard, share flashcards for people to see or edit, take timed or untimed quizzes, and create your account
+        to save your flashcard files.<br></p>
+    <p>If you do not have an account, click the "Create Account" button.<br></p>
+    <p>If you do have an account, click the "Login" button.<br></p>
+</div>
 
 {% endblock %}
