--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="dark">
 
@@ -6,27 +7,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TriviaTrek</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <link href='base.css' rel='stylesheet'>
+    <link href="{% static 'core/base.css' %}" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <div class="col-lg-8 mx-auto p-4 py-md-5">
-        <header class="d-flex align-items-center pb-3 mb-5 border-bottom">
-            <a href="/" class="d-flex me-md-auto align-items-center text-body-emphasis text-decoration-none"><span
-                    class="fs-4">TriviaTrek</span></a> {% if user.is_authenticated %}
-            <span>{{ user.username }}</span>
-            <form action="{% url 'logout' %}" method="post">
-                {% csrf_token %}
-                <button type="submit">Log Out</button>
-            </form>
+    <div class="title">
+        <h1>TriviaTrek</h1>
+    </div>
+    <div class="topnav">
+        <div class="nav-left">
+            {% if user.is_authenticated %}
+                <a>Home</a>
+                <a>Create</a>
+                <a>Files</a>
+                <a>Quiz</a>
             {% else %}
-            <a href="/accounts/login">Log in</a> {% endif %}
-        </header>
-        <main>
-            {% block content %} {% endblock %}
-        </main>
+                <a href="{% url 'index' %}">Home</a>
+            {% endif %}
+        </div>
+        <div class="nav-right">
+            {% if user.is_authenticated %}
+                <form action="{% url 'logout' %}" method="post">
+                    {% csrf_token %}
+                    <button type="submit">Log Out</button>
+                </form>
+            {% else %}
+                <a href="{% url 'signup' %}">Create Account</a>
+                <a href="{% url 'login' %}">Log in</a>
+            {% endif %}
+        </div>
+    </div>
+
+    <div class="container mt-5">
+        {% block content %}
+        {% endblock %}
     </div>
 </body>
-
 </html>
