Add basic card creation

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,7 +1,4 @@
 {% extends "base.html" %}
-
 {% block content %}
-
-<p>Hello, World</p>
-
+    <a href="{% url 'decks' %}">Your decks</a>
 {% endblock %}
