--- a/decks/templates/decks/card_detail.html
+++ b/decks/templates/decks/card_detail.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
     <a href="{{ card.deck.get_absolute_url }}">Back to deck</a>
-    <div>{{ card.front }}</div>
-    <div>{{ card.back }}</div>
+    <a href="{% url 'card-update' pk=card.pk %}">Edit</a>
+    <div class="border rounded">
+        <div class="m-3">{{ card.front }}</div>
+        <hr>
+        <div class="m-3">{{ card.back }}</div>
+    </div>
 {% endblock content %}
