--- a/decks/templates/decks/card_detail.html
+++ b/decks/templates/decks/card_detail.html
@@ -2,9 +2,6 @@
 {% block content %}
     <a href="{{ card.deck.get_absolute_url }}">Back to deck</a>
     <a href="{% url 'card-update' pk=card.pk %}">Edit</a>
-    <div class="border rounded">
-        <div class="m-3">{{ card.front }}</div>
-        <hr>
-        <div class="m-3">{{ card.back }}</div>
-    </div>
+    <a href="{% url 'card-delete' pk=card.pk %}">Delete</a>
+    {% include 'decks/_card_preview.html' %}
 {% endblock content %}
