--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
+{# djlint:off H030,H031 #}
 <html lang="en" data-bs-theme="dark">
     <head>
         <meta charset="UTF-8">
