--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -2,11 +2,20 @@
 
 {% block content %}
 
-<div class="introduction">
-    <p>Welcome to TriviaTrek! This is where you can make flashcards for you to create and be able to study with them. You can create sets of flashcard, share flashcards for people to see or edit, take timed or untimed quizzes, and create your account
-        to save your flashcard files.<br></p>
-    <p>If you do not have an account, click the "Create Account" button.<br></p>
-    <p>If you do have an account, click the "Login" button.<br></p>
-</div>
+{% if user.is_authenticated %}
+    <div class="introduction">
+        <p>Welcome back to TriviaTrek!<br></p>
+        <p>If you want to create a new set of flashcards, click the "Create" button.<br></p>
+        <p>If you want to see you existing flashcard sets, click the "Flashcards" button.<br></p>
+        <p>If you want to do a quiz on your flashcard set, click the "Quiz" button.<br></p>
+    </div>
+{% else %}
+    <div class="introduction">
+        <p>Welcome to TriviaTrek! This is where you can make flashcards for you to create and be able to study with them. You can create sets of flashcard, share flashcards for people to see or edit, take timed or untimed quizzes, and create your account
+            to save your flashcard files.<br></p>
+        <p>If you do not have an account, click the "Create Account" button.<br></p>
+        <p>If you do have an account, click the "Login" button.<br></p>
+    </div>
+{% endif %}
 
 {% endblock %}
