--- a/core/static/core/base.css
+++ b/core/static/core/base.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #b6fdff !important;
+    background-color: #5fcdd1 !important;
     min-height: 100vh; /* Ensure it covers the full screen */
 }
 
