--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
               rel="stylesheet"
               integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
               crossorigin="anonymous">
+        <link rel="stylesheet" href="{% static 'core/base.css' %}">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
                 crossorigin="anonymous"></script>
@@ -35,7 +36,7 @@
                         </li>
                         {% if user.is_authenticated %}
                             <li class="nav-item">
-                                <a class="nav-link">Create</a>
+                                <a href="{% url 'create' %}" class="nav-link">Create</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link">Files</a>
