--- a/core/templates/core/create.html
+++ b/core/templates/core/create.html
@@ -25,7 +25,7 @@
         <p>8. Press the "Add" button to add a flashcard after the current flashcard.<br></p>
         <p>9. Press the "Next" button to go to the next flashcard.<br></p>
     </div>
-    <div class="dropdown-container">
+    <!-- <div class="dropdown-container">
         <label for="dropdown">Choose a question option: </label>
         <select id="dropdown" name="dropdown">
             <option value="option1">Multiple Choice (Select 1)</option>
@@ -52,7 +52,8 @@
         <button>Save</button>
         <button>Add</button>
         <button>Next</button>
-    </div>
+    </div> -->
+    {% include "decks/card_form.html" %}
 {% endif %}
 
 {% endblock %}
