Clean up create.html

--- a/core/templates/core/create.html
+++ b/core/templates/core/create.html
@@ -25,35 +25,7 @@
         <p>8. Press the "Add" button to add a flashcard after the current flashcard.<br></p>
         <p>9. Press the "Next" button to go to the next flashcard.<br></p>
     </div>
-    <!-- <div class="dropdown-container">
-        <label for="dropdown">Choose a question option: </label>
-        <select id="dropdown" name="dropdown">
-            <option value="option1">Multiple Choice (Select 1)</option>
-            <option value="option2">Multiple Choice (Multiselect)</option>
-            <option value="option3">True or False</option>
-            <option value="option4">Term and Definition</option>
-            <option value="option5">Free Response</option>
-        </select>
-    </div>
-    <div class="flashcard-count">
-        <h2>Flashcard 1 of 10</h2>
-    </div>
-    <div class="flashcard-display">
-        <h2>Question</h2>
-        <p>A. Answer 1<br> <input type="checkbox" id="answer1" value="Correct Answer"> <label for="answer1"> Correct Answer</label> <br> <button>Remove Answer</button> </p>
-        <p>B. Answer 2<br> <input type="checkbox" id="answer2" value="Correct Answer"> <label for="answer2"> Correct Answer</label> <br> <button>Remove Answer</button> </p>
-        <p>C. Answer 3<br> <input type="checkbox" id="answer3" value="Correct Answer"> <label for="answer3"> Correct Answer</label> <br> <button>Remove Answer</button> </p>
-        <p>D. Answer 4<br> <input type="checkbox" id="answer4" value="Correct Answer"> <label for="answer4"> Correct Answer</label> <br> <button>Remove Answer</button> </p>
-        <button>Add Answer</button>
-    </div>
-    <div class="create-menu">
-        <button>Back</button>
-        <button>Delete</button>
-        <button>Save</button>
-        <button>Add</button>
-        <button>Next</button>
-    </div> -->
     {% include "decks/card_form.html" %}
 {% endif %}
 
-{% endblock %}
+{% endblock content %}
