--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Sign Up{% endblock %}
+{% block title %}Sign Up{% endblock title %}
 
 {% block content %}
 <h2>Sign up</h2>
@@ -9,4 +9,4 @@
   {{ form }}
   <button type="submit">Sign Up</button>
 </form>
-{% endblock %}
+{% endblock content %}
