--- a/decks/templates/decks/card_confirm_delete.html
+++ b/decks/templates/decks/card_confirm_delete.html
@@ -3,7 +3,7 @@
     <form method="post">
         {% csrf_token %}
         <p>Are you sure you want to delete this card?</p>
-        {% include 'decks/_card_preview.html' %}
+        {% include "decks/_card_preview.html" %}
         {{ form }}
         <a href="{{ card.get_absolute_url }}" class="btn btn-primary">Cancel</a>
         <input type="submit" value="Confirm" class="btn btn-danger">
