--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -36,4 +36,4 @@
 <p>No account? <a href="{% url 'signup' %}">Sign up</a></p>
 <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
 
-{% endblock %}
+{% endblock content %}
