--- a/decks/templates/decks/shared.html
+++ b/decks/templates/decks/shared.html
@@ -1,5 +1,18 @@
 {% extends "base.html" %}
 {% block content %}
+    <form class="d-flex" role="search">
+        <input class="form-control me-2"
+               name="search"
+               type="search"
+               placeholder="Search"
+               aria-label="Search">
+        <button class="btn btn-success" type="submit">Search</button>
+    </form>
+    {% if search %}
+        <p>Results for: "{{ search }}"</p>
+    {% else %}
+        <p>All shared decks</p>
+    {% endif %}
     <div class="container">
         <div class="row row-cols-1 row-cols-md-3">
             {% for deck in deck_list %}
