--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
 
+<div class="home">
 {% if user.is_authenticated %}
+
     <div class="introduction">
         <p>Welcome back to TriviaTrek!<br></p>
         <p>If you want to create a new set of flashcards, click the "Create" button.<br></p>
@@ -15,6 +17,18 @@
         <p>If you do not have an account, click the "Create Account" button.<br></p>
         <p>If you do have an account, click the "Login" button.<br></p>
     </div>
-{% endif %}
+    <div class="home_card_set">
+        <div class="home_card">
+            <p class="home_card_text">Flashcards</p>
+            <div class="home_flashcard_card">
 
+            </div>
+        </div>
+        <div class="home_card">
+            <p class="home_card_text">Quiz</p>
+        </div>
+    </div>
+
+{% endif %}
+</div>
 {% endblock %}
