--- a/templates/base.html
+++ b/templates/base.html
@@ -17,10 +17,10 @@
         {% block scripts %}{% endblock %}
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg bg-primary">
-            <div class="container">
-                <a href="/" class="navbar-brand">TriviaTrek</a>
-                <button class="navbar-toggler"
+        <div class="navbar">
+            <!-- <div class="container"> -->
+                <a href="/" class="logo">TriviaTrek</a>
+                <!-- <button class="navbar-toggler"
                         type="button"
                         data-bs-toggle="collapse"
                         data-bs-target="#navbarNav"
@@ -28,9 +28,9 @@
                         aria-expanded="false"
                         aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse">
-                    <ul class="navbar-nav me-auto">
+                </button> -->
+                <!-- <div class=""> -->
+                    <!-- <ul class="navbar-nav me-auto">
                         <li class="nav-item">
                             <a href="{% url 'index' %}" class="nav-link">Home</a>
                         </li>
@@ -45,28 +45,28 @@
                                 <a class="nav-link">Quiz</a>
                             </li>
                         {% endif %}
-                    </ul>
-                    <ul class="navbar-nav">
+                    </ul> -->
+                    <div class="nav_options">
                         {% if user.is_authenticated %}
-                            <li class="nav-item">
+                            <div class="">
                                 <form action="{% url 'logout' %}" method="post">
                                     {% csrf_token %}
                                     <button type="submit" class="btn">Log Out</button>
                                 </form>
-                            </li>
+                            </div>
                         {% else %}
-                            <li class="nav-item">
-                                <a href="{% url 'signup' %}" class="nav-link">Create Account</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="{% url 'login' %}" class="nav-link">Log in</a>
-                            </li>
+                            <div class="">
+                                <a href="{% url 'signup' %}" class="create_account">Create Account</a>
+                            </div>
+                            <div class="">
+                                <a href="{% url 'login' %}" class="login_bt">Log in</a>
+                            </div>
                         {% endif %}
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <div class="container mt-5">
+                    </div>
+                <!-- </div> -->
+            <!-- </div> -->
+        </div>
+        <div class="">
             {% block content %}{% endblock %}
         </div>
     </body>
