Added a tab to list all of the flashcard sets. Updates the various websites fort he site to flow easier and format it more better.

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -5,7 +5,8 @@
     <div class="introduction">
         <p>Welcome back to TriviaTrek!<br></p>
         <p>If you want to create a new set of flashcards, click the "Create" button.<br></p>
-        <p>If you want to see you existing flashcard sets, click the "Flashcards" button.<br></p>
+        <p>If you want to see you existing flashcard sets, click the "Flashcard Sets" button.<br></p>
+        <p>If you want to see flashcard sets you shared, click the "Shared" button.<br></p>
         <p>If you want to do a quiz on your flashcard set, click the "Quiz" button.<br></p>
     </div>
 {% else %}
