--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,10 @@
                                 <a href="{% url 'create' %}" class="nav-link">Create</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="{% url "shared-decks" %}">Shared</a>
+                                <a href="{% url 'decks' %}" class="nav-link">Flashcard Sets</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'shared-decks' %}">Shared</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link">Quiz</a>
