--- a/core/templates/core/create.html
+++ b/core/templates/core/create.html
@@ -10,22 +10,17 @@
         <p>Instructions<br></p>
     </div>
     <div class="instructions-list">
-        <p>1. Select the type of question in the dropbar menu.<br></p>
-        <p>2. Input your question on the top and your answers.<br></p>
-        <p>3. Press the "Add Answer" button to add an answer option.<br></p>
-        <p>4. Press the "Remove Answer" button to remove an answer option.<br></p>
-        <p>Note: Multiple Choice (Select 1) questions must only have 1 answer to have the "Correct Answer" checkmarked.<br></p>
-        <p>Note: Multiple Choice (Multiselect) questions must have at least 1 answer to have the "Correct Answer" checkmarked.<br></p>
-        <p>Note: True or False questions has the answers automatically applied and cannot be edited except determing for the Correct Answer.<br></p>
-        <p>Note: Term and Definition, and Free Repsonse questions require a singular text answer.<br></p>
-        <p>Note: Term and Definition, True or False, and Free Repsonse questions do not have the "Add Answer" and "Remove Answer" buttons.<br></p>
-        <p>5. Press the "Back" button to go to a previous flashcard.<br></p>
-        <p>6. Press the "Delete" button to delete the current flashcard.<br></p>
-        <p>7. Press the "Save" button to save your flashcard file.<br></p>
-        <p>8. Press the "Add" button to add a flashcard after the current flashcard.<br></p>
-        <p>9. Press the "Next" button to go to the next flashcard.<br></p>
+        <p>1. Click the "Create Deck" button below.<br></p>
+        <p>2. Enter the name (required) of your new set of flashcards and description (optional).<br></p>
+        <p>3. Click the "Save" button.<br></p>
+        <p>4. Once you have your flashcard set, click "Edit" to edit existing flashcards, click "Delete" to delete the current flashcard set, or click "Add Card" to add a card to the current flashcard set.<br></p>
+        <p>5. When you click the "Add Card" button, input the text for the front and back (both required) and click the "Save" button to save the card to the deck and then click "Back to Deck" to view all cards in your deck.<br></p>
+        <p>6. In your deck, you can click the card to edit or delete that card.<br></p>
+        <p>7. Once done, click the "Back to Flashcard Sets" buttons to go back to your flashcard sets.<br></p>
     </div>
-    {% include "decks/card_form.html" %}
+    <div class="create-deck-button">
+      <a href="{% url 'deck-create' %}">Create Deck</a>
+    </div>
 {% endif %}
 
 {% endblock content %}
