--- a/decks/templates/decks/card_confirm_delete.html
+++ b/decks/templates/decks/card_confirm_delete.html
@@ -1,11 +1,13 @@
 {% extends "base.html" %}
+{% load static %}
 {% block content %}
-    <form method="post">
+  <link rel="stylesheet" href="{% static 'core/card_confirm_delete.css' %}">
+    <form method="post" class="delete-question">
         {% csrf_token %}
         <p>Are you sure you want to delete this card?</p>
         {% include "decks/_card_preview.html" %}
         {{ form }}
-        <a href="{{ card.get_absolute_url }}" class="btn btn-primary">Cancel</a>
-        <input type="submit" value="Confirm" class="btn btn-danger">
+        <a href="{{ card.get_absolute_url }}" class="btn-btn-primary">Cancel</a>
+        <input type="submit" value="Confirm" class="btn-btn-danger">
     </form>
 {% endblock content %}
