--- a/decks/templates/decks/card_update_form.html
+++ b/decks/templates/decks/card_update_form.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
+{% load static %}
 {% block content %}
+    <link rel="stylesheet" href="{% static 'core/card_update_form.css' %}">
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <input type="submit" value="Save">
+        <input type="submit" value="Save" class="save-button1">
     </form>
 {% endblock content %}
