Set up websockets

--- a/decks/templates/decks/deck_detail.html
+++ b/decks/templates/decks/deck_detail.html
@@ -6,11 +6,7 @@
         <h1>{{ deck.name }}</h1>
         <p>{{ deck.description }}</p>
     </div>
-    <form action="{% url 'quiz-create' %}" method="post">
-        {% csrf_token %}
-        <input type="hidden" name="deck_pk" value="{{ deck.pk }}">
-        <input type="submit" value="Review" class="review-button">
-    </form>
+    <a href="{% url 'quiz-create' deck_pk=deck.pk %}">Review</a>
     <div class="create-navigation">
         <a href="{% url 'deck-update' pk=deck.pk %}">Edit</a>
         <a href="{% url 'deck-delete' pk=deck.pk %}">Delete</a>
