--- a/quiz/templates/quiz/quiz.html
+++ b/quiz/templates/quiz/quiz.html
@@ -4,8 +4,11 @@
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
     <script src="{% static 'quiz/quiz.js' %}"></script>
 {% endblock scripts %}
+{% block stylesheets %}
+    <link rel="stylesheet" href"{% static 'quiz/quiz.css' %}">
+{% endblock stylesheets %}
 {% block content %}
-    <link rel="stylesheet" href="{% static 'core/quiz.css' %}">
+    {{ pk|json_script:"quiz-pk" }}
     <p>
         Card <span id="card-counter"></span> of <span>{{ num_cards }}</span>
     </p>
