Implement basic timer

--- a/quiz/templates/quiz/quiz.html
+++ b/quiz/templates/quiz/quiz.html
@@ -12,6 +12,9 @@
     <p>
         Card <span id="card-counter"></span> of <span>{{ num_cards }}</span>
     </p>
+    <p>
+        Time remaining: <span id="timer"></span>
+    </p>
     <div class="border rounded m-3" id="card"></div>
     <div class="btn-group" role="group">
         <button class="btn btn-primary" id="known-btn">Know</button>
