--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -24,12 +24,12 @@
         <p class="home_card_text">Flashcards</p>
         <div class="home_flashcard"></div>
         <p class="dna_text">DNA</p>
-        <img src="{% static 'image/dna.webp' %}"  class="dna">
+        <img src="{% static 'image/dna.webp' %}" class="dna" width="200" height="150" alt="DNA molecule illustration">
     </div>
     <div class="home_card">
         <p class="home_card_text">Quiz</p>
         <div class="question_card"></div>
-        <img src="{% static 'image/question.webp' %}"  class="question">
+        <img src="{% static 'image/question.webp' %}" class="question" width="200" height="150" alt="Question mark graphic">
         <p class="true">True</p>
         <p class="false">False</p>
     </div>
