--- a/core/static/core/navbar.css
+++ b/core/static/core/navbar.css
@@ -1,12 +1,12 @@
 body {
     background-color: #E3EDEA;
     min-height: 100vh;
-
+}
 a, button {
     text-decoration: none;
     color: black;
 }
-}
+
 .navbar {
     background-color: #BFD0CD;
     width: 100%;
@@ -17,7 +17,7 @@ a, button {
 .logo {
     color: black;
     text-decoration: none;
-    font-size: 350%;   
+    font-size: 4rem;   
     margin-left: 2%;
 }
 .nav_options {
@@ -26,7 +26,7 @@ a, button {
     text-decoration: none;
     padding-right: 2%;
     gap: 5rem;
-    font-size: 200%;
+    font-size: 2rem;
     align-items: center;
 }
 .create_account:hover, .login_hover:hover {
@@ -36,7 +36,7 @@ a, button {
     display: flex;
     gap: 2rem;
     color: black;
-    font-size: 200%;
+    font-size: 2rem;
     margin-right: 40%;
 }
 .login_bt:hover, .logout_bt:hover {
