--- a/decks/templates/decks/deck_detail.html
+++ b/decks/templates/decks/deck_detail.html
@@ -12,9 +12,9 @@
         <input type="submit" value="Review" class="review-button">
     </form>
     <div class="create-navigation">
-        <a href="{% url 'deck-update' pk=deck.pk %}">Edit</a>
-        <a href="{% url 'deck-delete' pk=deck.pk %}">Delete</a>
-        <a href="{% url 'card-create' deck_pk=deck.pk %}">New card</a>
+        <a href="{% url 'deck-update' pk=deck.pk %}">Update Set</a>
+        <a href="{% url 'deck-delete' pk=deck.pk %}">Delete Set</a>
+        <a href="{% url 'card-create' deck_pk=deck.pk %}">Add New Card</a>
     </div>
     <div class="d-grid gap-3">
         {% for card in cards %}
