Modified the quiz review page to allow a button to go back to the deck without relying on using the back arrow button on the browser.

--- a/quiz/templates/quiz/quiz.html
+++ b/quiz/templates/quiz/quiz.html
@@ -16,6 +16,6 @@
         <button class="btn btn-primary" id="next-btn">Next</button>
     </div>
     <div class="back-deck-button">
-        <a>Back to Deck</a>
+        <a href="{{ deck.get_absolute_url }}">Back to Deck</a>
     </div>
 {% endblock content %}
