--- a/core/static/core/deck-detail.css
+++ b/core/static/core/deck-detail.css
@@ -1,6 +1,7 @@
 .deck-info{
     background-color: #007bff;
     color: white;
+    border: 5px solid black;
     padding: 10px;
     margin-bottom: 20px;
     font-family: "Courier New";
