Basic quiz timer

--- a/quiz/templates/quiz/quiz.html
+++ b/quiz/templates/quiz/quiz.html
@@ -15,12 +15,8 @@
     <p>
         Time remaining: <span id="timer"></span>
     </p>
+    <button id="start-btn">Start</button>
     <div class="border rounded m-3" id="card"></div>
-    <div class="btn-group" role="group">
-        <button class="btn btn-primary" id="known-btn">Know</button>
-        <button class="btn btn-primary" id="unknown-btn">Don't Know</button>
-        <button class="btn btn-primary" id="next-btn">Next</button>
-    </div>
     <div class="back-deck-button">
         <a>Back to Deck</a>
     </div>
