--- a/core/static/core/home.css
+++ b/core/static/core/home.css
@@ -108,3 +108,8 @@
     color: black;
     font-size: 1.5rem;
 }
+@media (min-resolution: 1.5dppx) {
+    .dna, .question {
+        width: 10vw;
+    }
+}
