--- a/core/static/core/navbar.css
+++ b/core/static/core/navbar.css
@@ -58,6 +58,19 @@ a, button {
     outline: none;
 }
 
+@media (min-resolution: 1.5dppx) {
+    .logo {
+        font-size: 2.5rem;   
+    }
+    .nav_options {
+        font-size: 1.4rem;
+    }
+    .login_options {
+        font-size: 1.5rem;
+        margin-right: 40vw;
+    }
+}
+
 /* .title {
     font-size: 50px;
     text-align: center;
