--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,7 @@
         <div>
             {% block content %}{% endblock content %}
         </div>
-    <div class="">
+    <div>
     </div>
 </body>
 
