Fixed the coloring of the Flashcard Decks page to reflect the new style.

--- a/core/static/core/navbar.css
+++ b/core/static/core/navbar.css
@@ -1,6 +1,6 @@
 body {
     background-color: #E3EDEA;
-    min-height: 100vh;
+    /* min-height: 100vh; */
 }
 a, button {
     text-decoration: none;
