--- a/core/static/core/deck-list.css
+++ b/core/static/core/deck-list.css
@@ -9,13 +9,13 @@ th, td {
     padding: 10px;
     text-align: left;
     border: 3px solid #000000;
-    background-color: #89CFF0;
+    background-color: #f3f3f3;
     font-size: 24px;
     color: #000000;
 }
 
 th {
-    background-color: #0015ff;
+    background-color: #96a2a0;
     color: white;
     font-size: 28px;
 }
