--- a/templates/base.html
+++ b/templates/base.html
@@ -19,50 +19,30 @@
     </head>
     <body>
         <div class="navbar">
-            <!-- <div class="container"> -->
+            <div class="navbar-left">
                 <a href="{% url 'index' %}" class="logo">TriviaTrek</a>
-                <!-- <button class="navbar-toggler"
-                        type="button"
-                        data-bs-toggle="collapse"
-                        data-bs-target="#navbarNav"
-                        aria-controls="navbarNav"
-                        aria-expanded="false"
-                        aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button> -->
-                <!-- <div class=""> -->
-                    <!-- <ul class="navbar-nav me-auto">
-                        <li class="nav-item">
-                            <a href="{% url 'index' %}" class="nav-link">Home</a>
-                        </li>-->
-                        {% if user.is_authenticated %}
-                        <div class="login_options">
-                            <a href="{% url 'create' %}" class="login_hover">Create</a>
-                            <a href="{% url 'decks' %}" class="login_hover">Flashcard Sets</a>
-                            <a class="login_hover" href="{% url 'shared-decks' %}">Shared</a>
-                            <a class="login_hover">Quiz</a>
-                        </div>
-                        {% endif %}
-                    </ul> 
-                    <div class="nav_options">
-                        {% if user.is_authenticated %}
-                            <div>
-                                <form action="{% url 'logout' %}" method="post">
-                                    {% csrf_token %}
-                                    <button type="submit" class="logout_bt">Log Out</button>
-                                </form>
-                            </div>
-                        {% else %}
-                            <div>
-                                <a href="{% url 'signup' %}" class="create_account">Create Account</a>
-                            </div>
-                            <div>
-                                <a href="{% url 'login' %}" class="login_bt">Log in</a>
-                            </div>
-                        {% endif %}
-                    </div>
-                <!-- </div> -->
-            <!-- </div> -->
+
+                {% if user.is_authenticated %}
+                <div class="login_options">
+                    <a href="{% url 'create' %}" class="login_hover">Create</a>
+                    <a href="{% url 'decks' %}" class="login_hover">Flashcard Sets</a>
+                    <a class="login_hover" href="{% url 'shared-decks' %}">Shared</a>
+                    <a class="login_hover">Quiz</a>
+                </div>
+                {% endif %}
+            </div>
+
+            <div class="nav_options">
+                {% if user.is_authenticated %}
+                    <form action="{% url 'logout' %}" method="post" class="mb-0">
+                        {% csrf_token %}
+                        <button type="submit" class="logout_bt">Log Out</button>
+                    </form>
+                {% else %}
+                    <a href="{% url 'signup' %}" class="create_account">Create Account</a>
+                    <a href="{% url 'login' %}" class="login_bt">Log in</a>
+                {% endif %}
+            </div>
         </div>
         <div>
             {% block content %}{% endblock content %}
