--- a/core/static/core/deck_form.css
+++ b/core/static/core/deck_form.css
@@ -1,10 +1,15 @@
-.save-button3 input {
+.save-button3 {
     text-decoration: none;
-    background-color: #0011ff;
-    color: white;
+    background-color: #B8C3BD;
+    color: black;
     border: 3px solid black;
     border-radius: 20px;
     padding: 15px;
     margin: 10px;
     font-family: "Courier New";
+}
+
+.form-container {
+    margin-top: 100px;
+    padding: 0 2vw;
 }
