--- a/core/static/core/quiz.css
+++ b/core/static/core/quiz.css
@@ -9,8 +9,8 @@
 }
 
 .back-deck-button {
-    background-color: #0011ff;
-    color: white;
+    background-color: #B8C3BD;
+    color: black;
     border: 3px solid black;
     border-radius: 20px;
     padding: 15px;
